drkns 11.09.2016 04:28:53 +0200 - build 4786

1. 0003294: Пустая строка комбобокса

2. Уточнение обработки DIF_EDITOR в диалогах.

3. Пара мелочей.

drkns 09.09.2016 23:40:13 +0200 - build 4785

1. После 4778 криво работал WindowMode.

drkns 08.09.2016 23:08:42 +0200 - build 4784

1. Рефакторинг.

2. TinyXML-2 4.0.1.

shmuel 06.09.2016 09:16:24 +0200 - build 4783

1. При записи/модификации/удалении клавиатурных макросов с помощью Ctrl.Ctrl. :
   a) Существующие стационарные макросы, назначенные на то же сочетание (area,key) приравниваются
      к встроенным кнопкосочетаниям Far, то-есть Far больше не предлагает их удалить либо переопределить.
   b) Для существующих клавиатурных макросов поведение остаётся прежним.

drkns 05.09.2016 20:21:32 +0200 - build 4782

1. С форума: не работало копирование после Ctrl+L Tab Ctrl+L.

zg 05.09.2016 19:25:21 +0200 - build 4781

1. с форума: Если вызвать команду FCTL_GETUSERSCREEN в момент когда на экране диалог (то же если меню или справка),
   то этот диалог почему-то остаётся в буфере.

zg 05.09.2016 12:27:54 +0200 - build 4780

1. продолжение 4777.

drkns 05.09.2016 00:52:20 +0200 - build 4779

1. Оказывается, есть плагины, считающие, что можно в Message передавать nullptr вместо "".

2. GCC warnings.

drkns 04.09.2016 23:49:35 +0200 - build 4778

1. Рефакторинг keyboard.cpp. Выкинуто много, много копипасты. Возможны сказочные чудеса.

2. Уточнение отрисовки часов при старте.

3. 4777 мог падать при закрытии некоторых окон.

zg 04.09.2016 21:21:02 +0200 - build 4777

1. рефакторинг менеджера окон.

zg 04.09.2016 15:37:13 +0200 - build 4776

1. если запрещена перерисовка диалога, не перерисовываем списки и открытые комбобоксы.

drkns 03.09.2016 18:19:14 +0200 - build 4775

1. Падение при определённых манипуляциях с панелями плагинов.

2. Утечка там же.

zg 01.09.2016 17:39:45 +0200 - build 4774

1. 0003288: ShowTotalSize for Plugin.

drkns 01.09.2016 01:21:07 +0200 - build 4773

1. Продолжение 4772.
