@@ -1,3 +1,7 @@
+drkns 11.09.2016 18:53:56 +0200 - build 4787
+
+1. 0003299: начиная с версии 3.0.4784 x86 нельзя создать новую ассоциацию - не сохраняется после редактирования
+
 drkns 11.09.2016 04:28:53 +0200 - build 4786
 
 1. 0003294: Пустая строка комбобокса
